--- a/WPF/Android/Views/AccommodationPage.xaml
+++ b/WPF/Android/Views/AccommodationPage.xaml
@@ -13,7 +13,7 @@
         <BitmapImage x:Key="GuidanceIcon" UriSource="../../../Resources/Images/guidance-icon.png"/>
         <BitmapImage x:Key="StatisticsIcon" UriSource="../../../Resources/Images/statistics-icon.png"/>
     </Page.Resources>
-    <Grid Background="#BABDE2">
+    <Grid Background="{StaticResource Beige}">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="90"/>
@@ -31,28 +31,31 @@
                 <ColumnDefinition Width="10"/>
             </Grid.ColumnDefinitions>
 
-            <Button x:Name="AddButton" Click="AddAccomodation_Click" Grid.Column="1" Height="80" Width="100" Background="Transparent">
-                <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <Image Source="{StaticResource AddIcon}" Width="40" Height="40" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    <TextBlock Text="Add" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </StackPanel>
+            <Button x:Name="AddButton" Click="AddAccomodation_Click" Grid.Column="1" 
+                    Height="80" Width="90" Background="{StaticResource Green}">
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <Image Source="{StaticResource AddIcon}" Width="40" Height="40"
+                                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Text="Add" FontSize="16"
+                                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </StackPanel>
             </Button>
 
-            <Button x:Name="RenovationsButton" Click="RenovationsButton_Click" Grid.Column="3" Height="80" Width="100" Background="Transparent">
+            <Button x:Name="RenovationsButton" Click="RenovationsButton_Click" Grid.Column="3" Height="80" Width="90" Background="{StaticResource Green}">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Image Source="{StaticResource RenovationsIcon}" Width="40" Height="40"/>
                     <TextBlock Text="Renovation" FontSize="16"/>
                 </StackPanel>
             </Button>
 
-            <Button x:Name="StatisticsButton" Click="StatisticsButton_Click" Grid.Column="5" Height="80" Width="100" Background="Transparent">
+            <Button x:Name="StatisticsButton" Click="StatisticsButton_Click" Grid.Column="5" Height="80" Width="90" Background="{StaticResource Green}">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Image Source="{StaticResource StatisticsIcon}" Width="40" Height="40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <TextBlock Text="Statistics" FontSize="16"/>
                 </StackPanel>
             </Button>
 
-            <Button x:Name="GuidanceButton" Click="GuidanceButton_Click" Grid.Column="7" Height="80" Width="100" Background="Transparent">
+            <Button x:Name="GuidanceButton" Click="GuidanceButton_Click" Grid.Column="7" Height="80" Width="90" Background="{StaticResource Green}">
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Image Source="{StaticResource GuidanceIcon}" Width="40" Height="40" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     <TextBlock Text="Guidance" FontSize="16"/>
@@ -62,11 +65,11 @@
         <Border Grid.Row="0" BorderBrush="Black" BorderThickness="0,0,0,2">
             <ListBox Height="500" Width="400" ItemsSource="{Binding AccommodationDTOs}" SelectedItem="{Binding SelectedAccommodation}" 
              ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden"
-             HorizontalContentAlignment="Stretch">
+             HorizontalContentAlignment="Stretch" Background="{StaticResource Beige}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <Border Background="#FFFCF5" BorderBrush="Black" BorderThickness="1" Height="110" CornerRadius="20" Width="380">
-                            <Grid Margin="20,10,10,10" VerticalAlignment="Center">
+                        <Border Background="{StaticResource Beige}" BorderBrush="Black" BorderThickness="1" Height="110" CornerRadius="20" Width="380">
+                            <Grid Margin="20,10,10,10" VerticalAlignment="Center" Background="{StaticResource Beige}">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="100"/>
                                     <ColumnDefinition Width="*"/>
@@ -92,7 +95,7 @@
                     <Style TargetType="ListBoxItem">
                         <Style.Triggers>
                             <Trigger Property="IsSelected" Value="True">
-                                <Setter Property="Background" Value="LightBlue"/>
+                                <Setter Property="Background" Value="{StaticResource Green}"/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
