--- a/WPF/Android/Views/AssignGradeWindow.xaml
+++ b/WPF/Android/Views/AssignGradeWindow.xaml
@@ -11,7 +11,7 @@
     <Window.Resources>
         <converter:DateOnlyToStringConverter x:Key="DateOnlyToStringConverter"/>
     </Window.Resources>
-    <Grid>
+    <Grid Background="{StaticResource Beige}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -26,7 +26,8 @@
             <RowDefinition Height="60"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label Content="Reservation info:" FontFamily="Global Sans Serif" FontSize="20" Grid.Row="0" Grid.Column="0" FontWeight="Bold"/>
+        <Label Content="Reservation info:" FontFamily="Global Sans Serif" FontSize="20" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
+               HorizontalAlignment="Center" FontWeight="Bold" Background="{StaticResource Green}" Padding="3" VerticalAlignment="Center"/>
         <TextBlock Text="{Binding AccReservationDTO.Accommodation.Name}" Grid.Column="0" Grid.Row="1" FontSize="16"  HorizontalAlignment="Center"/>
         <TextBlock Grid.Column="1" Grid.Row="1" FontSize="12" HorizontalAlignment="Center">
                 <Run Text="{Binding AccReservationDTO.StartDate, Converter={StaticResource DateOnlyToStringConverter}}"/>
@@ -46,12 +47,6 @@
                 Width="200" VerticalAlignment="Center" Margin="0,10,0,0" FontSize="14" Grid.Column="0" 
                 Grid.ColumnSpan="2" HorizontalAlignment="Center" FontFamily="Global Sans Serif"/>
 
-        
-            
-        
-
-        
-
         <StackPanel  Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
             <Label Content="Rule Following Grade: " FontSize="14" HorizontalAlignment="Center" FontFamily="Global Sans Serif"/>
             <Label Content="{Binding ElementName=SliderRuleFollowing, Path=Value}" HorizontalAlignment="Center" />
@@ -65,8 +60,8 @@
         <Label Grid.Row="5" Content="Additional Comments: " FontSize="14" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" FontFamily="Global Sans Serif"/>
         <TextBox Grid.Row="6" Text="{Binding ReviewDTO.OwnerComment,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" FontSize="13" Grid.Column="0" Grid.ColumnSpan="2" Width="250" Height="50"  HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="Global Sans Serif"/>
 
-        <Button x:Name="CancelButton" Grid.Row="7" Height="60" Width="100" Content="Cancel" Click="CancelButton_Click"/>
-        <Button x:Name="DoneButton" Grid.Row="7" Grid.Column="1" Height="60" Width="100" Content="Done" Click="DoneButton_Click"/>
+        <Button x:Name="CancelButton" Grid.Row="7" Height="50" Width="100" Content="Cancel" Click="CancelButton_Click" Background="{StaticResource Green}"/>
+        <Button x:Name="DoneButton" Grid.Row="7" Grid.Column="1" Height="50" Width="100" Content="Done" Click="DoneButton_Click" Background="{StaticResource Green}"/>
         
     </Grid>
 </Window>
