--- a/WPF/Android/Views/MainWindow.xaml
+++ b/WPF/Android/Views/MainWindow.xaml
@@ -25,7 +25,7 @@
             <ColumnDefinition Width="260"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Grid Background="#374375" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
+        <Grid Background="{StaticResource HardGreen}" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="60"/>
@@ -34,7 +34,7 @@
                 <Button Width="40" Height="40" Click="HamburgerButton_Click" Background="Transparent" BorderBrush="Transparent">
                     <Image Source="{StaticResource HamburgerIcon}"/>
                 </Button>
-                <Label x:Name="HeaderLabel" Content="My accommodations and statistics" VerticalAlignment="Center" FontWeight="Regular" FontSize="16" FontFamily="Global Sans Serif" Margin="10,0,0,0" />
+                <Label x:Name="HeaderLabel" Content="My accommodations and statistics" VerticalAlignment="Center" FontWeight="DemiBold" FontSize="18" FontFamily="Global Sans Serif" Margin="0,0,0,0" />
             </StackPanel>
             <Button Grid.Column="1" Height="40" Width="40" Background="Transparent" BorderBrush="Transparent">
                 <Image Source="{StaticResource HelpIcon}"/>
@@ -43,7 +43,7 @@
         <Frame x:Name="mainFrame" Grid.Row="1" NavigationUIVisibility="Hidden" Grid.Column="0" Grid.ColumnSpan="2" Navigated="mainFrame_Navigated"/>
         <Frame x:Name="sideFrame"  Grid.Row="0"  Grid.Column="0" Grid.RowSpan="2" NavigationUIVisibility="Hidden" Panel.ZIndex="1000"/>
         <Frame x:Name="blackFrame" Grid.Row="1" Grid.Column="1" NavigationUIVisibility="Hidden" Panel.ZIndex="1000"/>
-        <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Background="LightSkyBlue">
+        <Grid Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Background="{StaticResource SoftGreen}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
