--- a/WPF/Android/Views/ReservationReviewsPage.xaml
+++ b/WPF/Android/Views/ReservationReviewsPage.xaml
@@ -8,8 +8,32 @@
       mc:Ignorable="d" 
       d:DesignHeight="624" d:DesignWidth="430"
       Title="ReservationReviewsPage">
-    
-    <Grid Background="LightBlue">
+
+    <Page.Resources>
+        <Style TargetType="Button" x:Key="DisabledButtonStyle">
+            <Setter Property="Background" Value="{StaticResource Green}"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="Black" BorderThickness="1">
+                            <ContentPresenter/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#5a8c6b"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Page.Resources>
+            <Grid Background="{StaticResource Beige}">
         <TabControl Height="600" Width="400" VerticalAlignment="Center" HorizontalAlignment="Center">
             <TabItem Header="Reviews" Width="120" Height="40">
                 <Grid Background="#FFE5E5E5">
@@ -23,14 +47,17 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="60"/>
                     </Grid.RowDefinitions>
-                    <Button x:Name="AssignGradeButton" Grid.Row="1" Content="Assign a Grade"
+                    <Button x:Name="AssignGradeButton" Grid.Row="1"
                             Grid.Column="1" Width="120" Height="40" Click="AssignGradeButton_Click" 
-                            IsEnabled="{Binding SelectedReservation.CanBeGradedByOwner}">
-                        
+                            IsEnabled="{Binding SelectedReservation.CanBeGradedByOwner}"
+                            Style="{StaticResource DisabledButtonStyle}">
+                        <Label Content="Assign a grade" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     </Button>
 
                     <Button x:Name="ViewGradeButton" Grid.Row="1" Grid.Column="2" Width="120" Height="40" 
-                            Content="View Guest Grade" Click="ViewGradeButton_Click" IsEnabled="{Binding SelectedReservation.IsGradedByGuest}">
+                            Click="ViewGradeButton_Click" IsEnabled="{Binding SelectedReservation.IsGradedByGuest}"
+                            Style="{StaticResource DisabledButtonStyle}">
+                        <Label Content="View guest grade" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                         </Button>
 
                     <ListView ItemsSource="{Binding ReservationCollection, UpdateSourceTrigger=PropertyChanged}"
@@ -53,9 +80,21 @@
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
                                 <Setter Property="Height" Value="50"/>
+                                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                                <Setter Property="Foreground" Value="Black"/>
+                                <Setter Property="Background" Value="Transparent"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="{StaticResource Beige}"/>
+                                    </Trigger>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
+                                    </Trigger>
+                                </Style.Triggers>
                             </Style>
                         </ListView.ItemContainerStyle>
                     </ListView>
+
                 </Grid>
             </TabItem>
             
@@ -71,11 +110,12 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="60"/>
                     </Grid.RowDefinitions>
-                    <Button x:Name="Decline" Grid.Row="1" Content="Decline" Grid.Column="1" Width="120" Height="40" Command="{Binding DeclineButtonCommand}">
-
+                    <Button x:Name="Decline" Grid.Row="1" Grid.Column="1" Width="120" Height="40" Command="{Binding DeclineButtonCommand}" Style="{StaticResource DisabledButtonStyle}">
+                        <Label Content="Decline" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     </Button>
 
-                    <Button x:Name="Accept" Grid.Row="1" Grid.Column="2" Width="120" Height="40" Content="Accept" Command="{Binding AcceptButtonCommand}">
+                    <Button x:Name="Accept" Grid.Row="1" Grid.Column="2" Width="120" Height="40" Command="{Binding AcceptButtonCommand}" Style="{StaticResource DisabledButtonStyle}">
+                        <Label Content="Accept" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     </Button>
 
                     <ListView x:Name="RequestsList" ItemsSource="{Binding RescheduleRequestDTOs, UpdateSourceTrigger=PropertyChanged}"
@@ -99,6 +139,17 @@
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
                                 <Setter Property="Height" Value="50"/>
+                                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                                <Setter Property="Foreground" Value="Black"/>
+                                <Setter Property="Background" Value="Transparent"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="{StaticResource Beige}"/>
+                                    </Trigger>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
+                                    </Trigger>
+                                </Style.Triggers>
                             </Style>
                         </ListView.ItemContainerStyle>
                     </ListView>
