--- a/WPF/Android/Views/ViewGuestGradeWindow.xaml
+++ b/WPF/Android/Views/ViewGuestGradeWindow.xaml
@@ -11,7 +11,7 @@
     <Window.Resources>
         <converter:DateOnlyToStringConverter x:Key="DateOnlyToStringConverter"/>
     </Window.Resources>
-    <Grid>
+    <Grid Background="{StaticResource Beige}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
@@ -24,7 +24,8 @@
             <RowDefinition Height="30"/>
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Label Content="Your Grades: " Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" FontSize="20" BorderBrush="Black" BorderThickness="0,0,0,2"/>
+        <Label Content="Your Grades: " Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" FontSize="20" BorderBrush="Black" BorderThickness="0,0,0,2"
+               Background="{StaticResource Green}" Width="130" HorizontalAlignment="Left" Padding="0" VerticalAlignment="Center" Margin="5,0,0,5"/>
         <Label x:Name="AccommodationLabel" Content="{Binding AccommodationReservationDTO.Accommodation.Name}" Grid.Row="1" Grid.Column="0" FontSize="16" Padding="5,0,5,5"/>
         <Label x:Name="DateLabel"  Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="0">
             <TextBlock FontSize="12">
@@ -51,6 +52,7 @@
                    HorizontalAlignment="Left" VerticalAlignment="Top"
                    FontWeight="Medium" Width="220.5" Height="75" Margin="5,0,0,0"/>
         
-        <Button Content="Done" Grid.Column="1" Grid.Row="5" Height="80" Width="80" VerticalAlignment="Top" Margin="50,0,0,0" Click="Button_Click"/>
+        <Button Content="Done" Grid.Column="1" Grid.Row="5" Height="80" Width="80" VerticalAlignment="Top" Margin="50,0,0,0" Click="Button_Click"
+                Background="{StaticResource Green}"/>
     </Grid>
 </Window>
