--- a/WPF/Web/Views/BookingPage.xaml
+++ b/WPF/Web/Views/BookingPage.xaml
@@ -31,6 +31,13 @@
             <Setter Property="Foreground" Value="Black"/>
             <Setter Property="FontWeight" Value="SemiBold"/>
             <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Margin" Value="5 0 0 0"/>
+        </Style>
+
+        <Style x:Key="ButtonImage" TargetType="Image">
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="Width" Value="20"/>
+            <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality" />
         </Style>
 
     </Page.Resources>
@@ -86,12 +93,14 @@
 
             <Button x:Name="buttonClear" Grid.Column="2" Margin="10 5 10 5" Width="100" Height="30" VerticalAlignment="Top" HorizontalAlignment="Right" Click="ButtonClearClick">
                 <WrapPanel>
+                    <Image Style="{StaticResource ButtonImage}" Source="{StaticResource BinIcon}"/>
                     <TextBlock Text="Clear" Style="{StaticResource ButtonText}"/>
                 </WrapPanel>
             </Button>
 
             <Button x:Name="buttonFilter" Grid.Column="2" Margin="10 5 10 5" Width="100" Height="30" VerticalAlignment="Bottom" HorizontalAlignment="Right" Click="ButtonFilterClick">
                 <WrapPanel>
+                    <Image Style="{StaticResource ButtonImage}" Source="{StaticResource FilterIcon}"/>
                     <TextBlock Text="Filter" Style="{StaticResource ButtonText}"/>
                 </WrapPanel>
             </Button>
