--- a/WPF/Web/Views/AccommodationReservationCard.xaml
+++ b/WPF/Web/Views/AccommodationReservationCard.xaml
@@ -31,10 +31,14 @@
             <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality" />
         </Style>
 
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
+        </Style>
+        
     </UserControl.Resources>
 
     <Grid>
-        <Border Margin="5 5 5 5" Background="White" BorderBrush="Gray" BorderThickness="1" Width="320" CornerRadius="10">
+        <Border Margin="5 5 5 5" Background="White" BorderBrush="{StaticResource Green}" BorderThickness="1" Width="320" CornerRadius="10">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*"/>
