--- a/WPF/Web/Views/RescheduleRequestCard.xaml
+++ b/WPF/Web/Views/RescheduleRequestCard.xaml
@@ -24,7 +24,7 @@
         </Style>
     </UserControl.Resources>
 
-    <Border Margin="5 5 5 5" BorderBrush="Gray" Background="White" BorderThickness="1" Width="350" CornerRadius="10">
+    <Border Margin="5 5 5 5" Background="White" BorderBrush="{StaticResource Green}" BorderThickness="1" Width="350" CornerRadius="10">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -42,9 +42,9 @@
             <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0" Text="{Binding Reservation.Accommodation.Name}" FontSize="18" Margin="40 10 0 10" FontWeight="DemiBold"/>
 
             <Border Grid.Column="2" Grid.Row="0" Grid.ColumnSpan="2"
-                    CornerRadius="10" Background="LightGray">
+                    CornerRadius="10" Background="{StaticResource SoftGreen}">
                 <TextBlock FontSize="15" Text="{Binding Status}" Margin="10 10 10 10"
-                           HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                           HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="SemiBold"/>
             </Border>
 
             <Label Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
@@ -77,7 +77,7 @@
             </Label>
 
             <Border Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Grid.RowSpan="2"
-                    CornerRadius="10" BorderThickness="1" BorderBrush="Gray" Margin="5 5 5 5">
+                    CornerRadius="10" BorderThickness="1" BorderBrush="{StaticResource Green}" Margin="5 5 5 5">
                 <TextBlock Text="{Binding OwnerComment}" Margin="10 10 10 10"/>
             </Border>
 
