--- a/WPF/Web/Views/ReservationsPage.xaml
+++ b/WPF/Web/Views/ReservationsPage.xaml
@@ -14,9 +14,32 @@
             <Setter Property="Width" Value="20"/>
             <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality" />
         </Style>
+
+        <Style x:Key="ButtonText" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Margin" Value="10 0 0 0"/>
+        </Style>
+
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Width" Value="120"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+
+        <Style x:Key="MainLabel" TargetType="Label">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="10 0 0 0"/>
+        </Style>
+
     </Page.Resources>
 
-    <Grid x:Name="mainGrid">
+    <Grid x:Name="mainGrid" Background="{StaticResource Beige}">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
@@ -29,26 +52,26 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Grid Grid.Row="0" Background="LightGray" Height="80">
+                <Grid Grid.Row="0" Background="{StaticResource Green}" Height="80">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label Grid.Column="0" Content="Reservations" FontSize="20" VerticalContentAlignment="Center" Margin="10 0 0 0"/>
+                    <Label Grid.Column="0" Content="Reservations" Style="{StaticResource MainLabel}"/>
 
-                    <Button x:Name="buttonScheduled" Grid.Column="1" Height="30" Width="120" VerticalAlignment="Center" Click="ButtonScheduledClick">
+                    <Button x:Name="buttonScheduled" Grid.Column="1" Style="{StaticResource ButtonStyle}" Click="ButtonScheduledClick">
                         <WrapPanel>
                             <Image Style="{StaticResource ButtonImage}" Source="{StaticResource ScheduledIcon}"/>
-                            <TextBlock Text="Scheduled" Margin="10 0 0 0"/>
+                            <TextBlock Text="Scheduled" Style="{StaticResource ButtonText}"/>
                         </WrapPanel>
                     </Button>
 
-                    <Button x:Name="buttonExpired" Grid.Column="2" Height="30" Width="120" VerticalAlignment="Center" Click="ButtonExpiredClick">
+                    <Button x:Name="buttonExpired" Grid.Column="2" Style="{StaticResource ButtonStyle}" Click="ButtonExpiredClick">
                         <WrapPanel>
                             <Image Style="{StaticResource ButtonImage}" Source="{StaticResource TimeIcon}"/>
-                            <TextBlock Text="Expired" Margin="10 0 0 0"/>
+                            <TextBlock Text="Expired" Style="{StaticResource ButtonText}"/>
                         </WrapPanel>
                     </Button>
                 </Grid>
@@ -75,8 +98,8 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Border Background="LightGray" Height="80" Grid.Row="0" BorderThickness="5 0 0 0">
-                    <Label Grid.Column="0" Content="Reschedule date requests" FontSize="20" VerticalContentAlignment="Center" Margin="10 0 0 0"/>
+                <Border Background="{StaticResource Green}" Height="80" Grid.Row="0" BorderThickness="5 0 0 0">
+                    <Label Grid.Column="0" Content="Reschedule date requests" Style="{StaticResource MainLabel}"/>
                 </Border>
 
                 <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" Margin="0,0,0,25">
