--- a/WPF/Web/Views/ReviewsPage.xaml
+++ b/WPF/Web/Views/ReviewsPage.xaml
@@ -14,27 +14,49 @@
             <Setter Property="Width" Value="20"/>
             <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality" />
         </Style>
+
+        <Style x:Key="ButtonText" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Margin" Value="10 0 0 0"/>
+        </Style>
+
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Width" Value="180"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+
+        <Style x:Key="MainLabel" TargetType="Label">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Margin" Value="100 0 0 0"/>
+        </Style>
     </Page.Resources>
 
-    <Grid>
+    <Grid Background="{StaticResource Beige}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Background="LightGray" Height="80">
+        <Grid Grid.Row="0" Background="{StaticResource Green}" Height="80">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Column="0" FontSize="20" VerticalContentAlignment="Center" Margin="100 0 0 0"
+            <Label Grid.Column="0" Style="{StaticResource MainLabel}"
                    Content="Reviews received by accommodation owners" />
 
-            <Button x:Name="buttonGenerateReport" Grid.Column="1" Height="40" Width="150" VerticalAlignment="Center">
+            <Button x:Name="buttonGenerateReport" Grid.Column="1" Style="{StaticResource ButtonStyle}">
                 <WrapPanel>
                     <Image Style="{StaticResource ButtonImage}" Source="{StaticResource DocumentIcon}"/>
-                    <TextBlock Text="Generate report" Margin="10 0 0 0"/>
+                    <TextBlock Text="Generate report" Style="{StaticResource ButtonText}"/>
                 </WrapPanel>
             </Button>
         </Grid>
