--- a/WPF/Tablet/Views/MenuBarButtonPage.xaml
+++ b/WPF/Tablet/Views/MenuBarButtonPage.xaml
@@ -10,7 +10,7 @@
 
     <Grid>
         <Button  x:Name="menuButton" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="40" Margin="0,0,0,0" Click="menuButton_Click" Background="Cyan" BorderBrush="#FF190303" Foreground="{x:Null}">
-            <Image Source="/Resources/Images/hamburger.png" />
+            <Image Source="{StaticResource HamburgerBarIcon}" />
         </Button>
 
     </Grid>
