--- a/WPF/Tablet/Views/MenuBarPage.xaml
+++ b/WPF/Tablet/Views/MenuBarPage.xaml
@@ -27,43 +27,43 @@
             <Border BorderBrush="Black" BorderThickness="1" Grid.Row="0"/>
             <Button x:Name="homeButton" Grid.Row="1" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,20,0,5" Click="homeButton_Click">
                 <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
-                    <Image Source="/Resources/Images/normal-home-icon.png" Width="40" Height="40" />
+                    <Image Source="{StaticResource HomeIcon}" Width="40" Height="40" />
                     <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Home Page</Label>
                 </StackPanel>
             </Button>
             <Button x:Name="addButton" Grid.Row="2" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="addButton_Click">
                 <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
-                    <Image Source="/Resources/Images/add2.png" Width="40" Height="40" />
+                    <Image Source="{StaticResource Add2Icon}" Width="40" Height="40" />
                     <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Add Tour</Label>
                 </StackPanel>
             </Button>
             <Button x:Name="followLiveButton" Grid.Row="3" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="followLiveButton_Click">
                 <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
-                    <Image Source="/Resources/Images/live.png" Width="40" Height="40" />
+                    <Image Source="{StaticResource LiveIcon}" Width="40" Height="40" />
                     <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Follow Live</Label>
                 </StackPanel>
             </Button>
             <Button x:Name="finishedToursButton" Grid.Row="4" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="finishedToursButton_Click">
                 <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
-                    <Image Source="\Resources\Images\finish.png" Width="40" Height="40" />
+                    <Image Source="{StaticResource FinishIcon}" Width="40" Height="40" />
                     <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Finished Tours</Label>
                 </StackPanel>
             </Button>
             <Button x:Name="statsButton" Grid.Row="5" HorizontalAlignment="Left" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="statsButton_Click">
                 <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
-                    <Image Source="/Resources/Images/stats.png" Width="40" Height="40" />
+                    <Image Source="{StaticResource StatsIcon}" Width="40" Height="40" />
                     <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Tour Stats</Label>
                 </StackPanel>
             </Button>
             <Button x:Name="requestsButton" Grid.Row="6" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="{x:Null}" Margin="5,5,0,5" Click="requestsButton_Click">
                 <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
-                    <Image Source="/Resources/Images/request.png" Width="40" Height="40" />
+                    <Image Source="{StaticResource RequestIcon}" Width="40" Height="40" />
                     <Label VerticalAlignment="Center" FontSize="14" FontWeight="Bold">Tourist Requests</Label>
                 </StackPanel>
             </Button>
         </Grid>
         <Button x:Name="menuButton" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="40" Click="menuButton_Click" Background="Cyan" BorderBrush="Black" Foreground="{x:Null}">
-            <Image Source="/Resources/Images/hamburger.png" />
+            <Image Source="{StaticResource HamburgerBarIcon}" />
         </Button>
     </Grid>
 </Page>
